--- a/Lua/dune-project
+++ b/Lua/dune-project
@@ -1,6 +1,27 @@
-(lang dune 2.7)
+(lang dune 2.8)
+
+(generate_opam_files true)
 
 (cram enable)
 
+(license LGPL-3.0-only)
+
+(authors "Arthur @achains")
+
 (package
- (name Lua))
+ (name Lua) ; FIXME and regenerate .opam file using 'dune build @install'
+ (synopsis "FIXME An interpreter for language")
+ (description
+  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
+ (version 0.1)
+ (depends
+  (dune
+   (>= 2.8))
+  opal
+  (ppx_inline_test :with-test)
+  ppx_expect
+  (odoc :with-doc)
+  (ocamlformat :build)
+  base
+  ; After adding dependencies to 'dune' files and the same dependecies here too
+  ))
