--- a/Lambda/Lambda.opam
+++ b/Lambda/Lambda.opam
@@ -4,10 +4,11 @@ version: "0.1"
 synopsis: "FIXME An interpreter for language"
 description:
   "FIXME. A longer description, for example, which are the most interesing features being supported, etc."
-authors: ["FIXME Vasy Pupkin"]
+maintainer: ["FIXME Vasya Pupkin"]
+authors: ["FIXME Vasya Pupkin"]
 license: "LGPL-3.0-only"
 depends: [
-  "dune" {>= "2.8" & >= "2.8"}
+  "dune" {>= "2.8"}
   "angstrom"
   "ppx_inline_test" {with-test}
   "ppx_expect"
