--- a/Lua/Lua.opam
+++ b/Lua/Lua.opam
@@ -4,7 +4,8 @@ version: "0.1"
 synopsis: "FIXME An interpreter for language"
 description:
   "FIXME. A longer description, for example, which are the most interesing features being supported, etc."
-authors: ["Arthur @achains"]
+maintainer: ["https://github.com/achains"]
+authors: ["Arthur"]
 license: "LGPL-3.0-only"
 depends: [
   "dune" {>= "2.8" & >= "2.8"}
