--- a/Lua/dune-project
+++ b/Lua/dune-project
@@ -6,7 +6,8 @@
 
 (license LGPL-3.0-only)
 
-(authors "Arthur @achains")
+(authors "Arthur")
+(maintainers "https://github.com/achains")
 
 (package
  (name Lua) ; FIXME and regenerate .opam file using 'dune build @install'
