--- a/Lambda/Lambda.opam
+++ b/Lambda/Lambda.opam
@@ -7,6 +7,8 @@ description:
 maintainer: ["FIXME Vasya Pupkin"]
 authors: ["FIXME Vasya Pupkin"]
 license: "LGPL-3.0-only"
+homepage: "FIXME Homepage"
+bug-reports: "FIXME where to put bug reports about the code"
 depends: [
   "dune" {>= "2.8"}
   "angstrom"
