--- a/Lua/Lua.opam
+++ b/Lua/Lua.opam
@@ -7,6 +7,8 @@ description:
 maintainer: ["https://github.com/achains"]
 authors: ["Arthur"]
 license: "LGPL-3.0-only"
+homepage: "https://github.com/achains/mini-Lua"
+bug-reports: "https://github.com/achains/mini-Lua"
 depends: [
   "dune" {>= "2.8" & >= "2.8"}
   "opal"
