--- a/Lua/Lua.opam
+++ b/Lua/Lua.opam
@@ -14,6 +14,8 @@ depends: [
   "opal"
   "ppx_inline_test" {with-test}
   "ppx_expect"
+  "ppx_deriving"
+  "ppx_show"
   "odoc" {with-doc}
   "ocamlformat" {build}
   "base"
