--- a/.github/workflows/PrPost.yml
+++ b/.github/workflows/PrPost.yml
@@ -123,6 +123,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           #deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}  # used only to publish in local repo
           publish_dir: ./docs/_doc/_html
           #external_repository: Kakadu/fp2021
           publish_branch: gh-pages
