--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -113,6 +113,9 @@ jobs:
         # TODO: maybe PR_number is not required
       - run: echo $(git rev-parse HEAD) > ${{ env.latest }}/${{ env.RDJSON_DIR_PATH }}/CI_COMMIT.txt
 
+      - run: cat ${{ env.latest }}/${{ env.RDJSON_DIR_PATH }}/CI_COMMIT.txt
+      - run: PAGER= git log
+
       - name: Run reviewdog
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
