Added deps to  dune-project

--- a/Lua/dune-project
+++ b/Lua/dune-project
@@ -23,6 +23,8 @@
   opal
   (ppx_inline_test :with-test)
   ppx_expect
+  ppx_deriving
+  ppx_show
   (odoc :with-doc)
   (ocamlformat :build)
   base
