--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -142,6 +142,14 @@ jobs:
       - name: Installing a clone detector
         run: npm install -g jscpd
 
+      - name: Looking for clones
+        run: python3 ./find_clones.py ${{ env.latest }}
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: jscpd_report
+          path: jscpd_report.txt
+
       #- name: Deploy found lints
       #  uses: peaceiris/actions-gh-pages@v3
       #  with:
