--- a/.github/workflows/PrPost.yml
+++ b/.github/workflows/PrPost.yml
@@ -77,7 +77,7 @@ jobs:
           external_repository: Kakadu/fp2021-ci-artifacts
           publish_branch: master
           keep_files: true
-          destination_dir: 2021/${{ github.PIARAST_NAME }}/
+          destination_dir: 2021/${{ env.PIARAST_NAME }}/
 
   ###################################################################################################
   upload_docs:
@@ -192,36 +192,39 @@ jobs:
             fs.writeFileSync('${{ github.workspace }}/jscpd_report.zip', Buffer.from(download.data));
 
       - run: unzip jscpd_report.zip
+      - run: |
+          echo "PR_NUMBER=$(cat PR_number.txt)" >> $GITHUB_ENV
 
+      #- run: cat jscpd_report.txt
       - id: get-comment-body
         run: |
-          body=$(cat jscpd_report.txt)
+          body="$(cat jscpd_report.txt)"
           body="${body//'%'/'%25'}"
           body="${body//$'\n'/'%0A'}"
           body="${body//$'\r'/'%0D'}"
-          echo ::set-output name=body::$body
+          echo "::set-output name=body::$body"
 
+      #- run: echo '${{ steps.get-comment-body.outputs.body }}'
       - name: Find Comment
         uses: peter-evans/find-comment@v1
         id: fc
         if: ${{ always() }}
         with:
           issue-number: ${{ env.PR_NUMBER }}
-          body-includes: peter-evans/create-or-update-comment
+          body-includes: Результат поиска клонов
           comment-author: github-actions[bot]
 
       - name: Delete old comment
         uses: jungwinter/comment@v1
-        if: ${{ steps.fc.outputs.comment-id != '' }}
+        if: ${{ steps.fc.outputs.comment-id != 0 }}
         with:
           type: delete
-          comment_id: ${{ steps.create.outputs.id }}
+          comment_id: ${{ steps.fc.outputs.comment-id }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Create comment
         uses: peter-evans/create-or-update-comment@v1
         with:
-          #comment-id: ${{ steps.fc.outputs.comment-id }}
           edit-mode: replace
           issue-number: ${{ env.PR_NUMBER }}
           body: ${{ steps.get-comment-body.outputs.body }}
