Add QuickCheck tests

--- a/Lambda/Lambda.opam
+++ b/Lambda/Lambda.opam
@@ -13,6 +13,7 @@ depends: [
   "dune" {>= "2.8"}
   "angstrom"
   "ppx_inline_test" {with-test}
+  "qcheck-core"
   "ppx_expect"
   "odoc" {with-doc}
   "ocamlformat" {build}
