--- a/Lambda/lib/dune
+++ b/Lambda/lib/dune
@@ -3,7 +3,7 @@
  (public_name Lambda.Lib)
  (modules Ast Lambda Interpret Parser Printast Pprintast utils Tests)
  (modules_without_implementation ast)
- (libraries base)
+ (libraries base angstrom)
  (preprocess
   (pps ppx_expect))
  (inline_tests))
