Upgrading a template project
Signed-off-by: Kakadu <Kakadu@pm.me>

--- a/Lambda/demos/dune
+++ b/Lambda/demos/dune
@@ -14,7 +14,7 @@
  (name demoParse)
  (modules demoParse)
  (public_name demoParse)
- (libraries lambda_lib))
+ (libraries lambda_lib stdio))
 
 (cram
  (deps ./demoNO.exe ./demoAO.exe ./demoParse.exe))
