--- a/Lambda/lib/dune
+++ b/Lambda/lib/dune
@@ -3,7 +3,7 @@
  (public_name Lambda.Lib)
  (modules Ast Lambda Interpret Parser Printast Pprintast utils Tests)
  (modules_without_implementation ast)
- (libraries base angstrom)
+ (libraries base angstrom ppx_show.runtime)
  (preprocess
-  (pps ppx_expect))
+  (pps ppx_expect ppx_show))
  (inline_tests))
