--- a/Lua/demos/dune
+++ b/Lua/demos/dune
@@ -74,6 +74,20 @@
  (preprocess
   (pps ppx_deriving.show ppx_deriving.eq)))
 
+(executable
+ (name demoTable)
+ (modules demoTable)
+ (libraries Lua.Lib)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.eq)))
+
+(executable
+ (name demoNullKeyTable)
+ (modules demoNullKeyTable)
+ (libraries Lua.Lib)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.eq)))
+
 (cram
  (deps
   ./demoForNumerical.exe
@@ -85,4 +99,6 @@
   ./demoFactorial.exe
   ./demoHighFunctions.exe
   ./demoFail.exe
-  ./demoEmpty.exe))
+  ./demoEmpty.exe
+  ./demoTable.exe
+  ./demoNullKeyTable.exe))
