--- a/OCamlEff/dune-project
+++ b/OCamlEff/dune-project
@@ -15,7 +15,7 @@
 (homepage "https://github.com/zishkaz/fp2021")
 
 (package
- (name Lambda) ; FIXME and regenerate .opam file using 'dune build @install'
+ (name OCamlEff) ; FIXME and regenerate .opam file using 'dune build @install'
  (synopsis "OCaml + effects")
  (description
   "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
