--- a/C/lib/dune
+++ b/C/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name c_lib)
  (public_name C.Lib)
- (modules Ast Parser Interpreter2 Interpreter Interpreterctx)
+ (modules Ast Parser Interpreterctx)
  (libraries base angstrom ppx_show.runtime)
  (preprocess
   (pps ppx_expect ppx_show))
