--- a/Lua/dune
+++ b/Lua/dune
@@ -1,7 +1,7 @@
 (env
  (dev
   (flags
-   (:standard -warn-error -A -w -3-9-32-34-58)))
+   (:standard -warn-error -A -w -3-9-32-58)))
  (release
   (flags
    (:standard -warn-error -A -w -58))))
@@ -10,7 +10,9 @@
  (name REPL)
  (public_name REPL)
  (modules REPL)
- (libraries Lambda.Lib))
+ (libraries Lua.Lib)
+ (preprocess
+  (pps ppx_deriving.show ppx_deriving.eq)))
 
 (cram
  (deps ./REPL.exe %{bin:REPL}))
