--- a/Lambda/dune
+++ b/Lambda/dune
@@ -1,7 +1,7 @@
 (env
  (dev
   (flags
-   (:standard -warn-error -A -w -3-9-32-34-58)))
+   (:standard -warn-error -A -w -3-9-32-58)))
  (release
   (flags
    (:standard -warn-error -A -w -58))))
