--- a/C/dune-project
+++ b/C/dune-project
@@ -17,7 +17,16 @@
 (package
  (name C) ; FIXME and regenerate .opam file using 'dune build @install'
  (synopsis "C_mini")
- (description "soon")
+ (description "Не поддерживается:
+  - Изменение значений большего типа меньшим
+    ( int* arr = malloc(sizeof(int));
+      arr[0] = 1000000000;
+      char *pt = arr;
+      pt[0] = 'y';) -> arr[0] != 1000000121 
+  - Многомерные массивы (не указатели)
+  ...
+
+  запись x++/x-- эквивалентна x = x + 1 / x = x - 1")
  (version 0.1)
  (depends
   dune
