--- a/C/C.opam
+++ b/C/C.opam
@@ -2,8 +2,8 @@
 opam-version: "2.0"
 version: "0.1"
 synopsis: "C_mini"
-description: 
-"Не поддерживается:
+description: """
+Не поддерживается:
   - Изменение значений большего типа меньшим
     ( int* arr = malloc(sizeof(int));
       arr[0] = 1000000000;
@@ -12,7 +12,7 @@ description:
   - Многомерные массивы (не указатели)
   ...
 
-  запись x++/x-- эквивалентна x = x + 1 / x = x - 1"
+  запись x++/x-- эквивалентна x = x + 1 / x = x - 1"""
 maintainer: ["a.oleynikov@outlook.com"]
 authors: ["Andrew Olejnikov"]
 license: "LGPL-3.0-only"
