--- a/C/lib/dune
+++ b/C/lib/dune
@@ -1,9 +1,7 @@
 (env
  (dev
   (flags
-   (:standard -warn-error -A -w -3-9-32-58)
-   (:standard -warn-error -A -w -26)
-   (-short-paths)))
+   (:standard -warn-error -A -w -3-9-32-58)))
  (release
   (flags
    (:standard -warn-error -A -w -58))))
