--- a/OCamlEff/dune-project
+++ b/OCamlEff/dune-project
@@ -23,8 +23,10 @@
  (depends
   dune
   angstrom
+  str
   (ppx_inline_test :with-test)
   qcheck-core
+  ppx_deriving.eq
   ppx_expect
   ppx_show
   (odoc :with-doc)
